# crewAI-capsule

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crewai_capsule/: __init__.py  tools.py
src/: sandbox_js.ts  sandbox_py.py
tests/: test_integration.py  test_tools.py
